<resources>
    <string name="app_name">Quiz</string>

    //For Main Activity
    <string name="no_of_players">How many players?</string>
    <string name="no1_player">1 player</string>
    <string name="no2_players">2 players</string>
    <string name="score_button">Scores</string>

    //For registration layout
    <string name="player1_registration">Enter Player 1\'s Name</string>
    <string name="player2_registration">Enter Player 2\'s Name</string>
    <string name="proceed_registration">Proceed</string>
    <string name="blank_registration">Name cannot be empty</string>
    <string name="user_already_exists_registration">User already exists</string>
    <string name="user_names_identical_registration">User names cannot be identical</string>

    //Players Start menu
    <string name="player1_turn">Player 1\'s turn</string>
    <string name="player2_turn">It\'s Player 2\'s turn.</string>
    <string name="player2_handphone">Hand the phone to Player 2 and press Start to begin</string>
    <string name="start">Start</string>

    //For question layout
    <string name="question_text">
       Question 1: 2 + 2 = 4
    </string>
    <string name="already_answered_toast">Already answered!</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="submit_button">Submit</string>
    <string name="not_answered_toast">You haven\'t answered all questions yet!</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_1">Question 2: 1 + 1 = 2</string>
    <string name="question_2">Question 3: 1 + 1 = 3</string>
    <string name="question_3">Question 4: 1 + 2 = 2</string>
    <string name="question_4">Question 5: 1 + 2 = 4</string>

    //For score
    <string name="score">Score: 0</string>
    <string name="finalscore">0</string>

    //For cheat button
    <string name="warning_text">Are you sure you want to do this? You will not score a point!</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">Cheat</string>

    //For result layout
    <string name="result_text">You scored:</string>
    <string name="play_again">Play again?</string>
    <string name="next_player">Next Player</string>
    <string name="player_2_turn">Proceed to player 2\'s turn</string>

    //For fragment
    <string name="fragment_button_1">1</string>
    <string name="fragment_button_2">2</string>
    <string name="fragment_button_3">3</string>
    <string name="fragment_button_4">4</string>
    <string name="fragment_button_5">5</string>
    <string name="fragment_text">Question selection:</string>

</resources>
