<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_text"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:orientation="horizontal" >
        <Button
            android:id="@+id/fragment_button_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/fragment_button_1"
            />

        <Button
            android:id="@+id/fragment_button_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/fragment_button_2"
            />

        <Button
            android:id="@+id/fragment_button_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/fragment_button_3"
            />

        <Button
            android:id="@+id/fragment_button_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/fragment_button_4"
            />

        <Button
            android:id="@+id/fragment_button_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/fragment_button_5"
            />

    </LinearLayout>

</LinearLayout>