<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:text="@string/player1_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/player_1_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:gravity="center"
        android:ems="10"/>

    <TextView
        android:text="@string/player2_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/player_2_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:gravity="center"
        android:ems="10"/>

    <Button
        android:text="@string/proceed_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/proceed_registration2" />


</LinearLayout>